[package]
name = "rust-mongo-async_graphql-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
async-graphql = { version = "4.0.14", features = ["bson", "chrono"] }
async-graphql-rocket = "4.0.14"
dotenv = "0.15.0"
serde = "1.0.145"
mongodb = { version = "2.3.0", default-features = false, features = ["sync"] }
uuid = "1.1.2"
futures = "0.3.24"
